--- a/TeamProject/templates/test.html
+++ b/TeamProject/templates/test.html
@@ -6,11 +6,15 @@
 
 </head>
 <body>
-
+	<i class="fas fa-exclamation"></i>
+	<button></button>
 	<script>
-		const file = new File([blob] , "http://127.0.0.1:5000/static/img/df_icon.jpg");
-		console.log(file);
-
-	</script>
+		const x = (num)=>{
+			for (var i = 0; i <= num; i++) {
+				console.log('출력',i);
+			}
+		}
+		x()
+</script>
 </body>
 </html>
