--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -95,8 +95,8 @@
 	<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
 
 	<script src="{{ url_for('static', filename='js/auth.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/manager.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/mypage.js') }}"></script>
+<!-- 	<script src="{{ url_for('static', filename='js/main.js') }}"></script> -->
+<!-- 	<script src="{{ url_for('static', filename='js/manager.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/mypage.js') }}"></script> -->
 </body>
 </html>
