--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -143,7 +143,7 @@
     </div>
 
     <div class="user_management_container">
-        <div>
+        <div id="user_menus">
             <span class="sub_title">회원 관리 - </span>
             <select class="user_search_option">
                 <option value="1">회원 닉네임</option>
