--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -158,7 +158,7 @@ border-top: 7px solid var(--color_purple);
 
 /*	border-radius: 50%;
 */}
-.fa-fire-alt{
+.fa-fire{
 	font-size: 1.2rem;
 	color: red;
 }
