--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -60,7 +60,7 @@
 					</button>
 				</div>
 				<div class="side_best">
-					<h3>Best</h3>
+					<h3>베스트 게시글</h3>
 					<div class="side_bestContentsList"></div>
 				</div>
 				<div class="side_adWrap">
