--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -557,7 +557,6 @@ border-top: 7px solid var(--color_purple);
 	position: relative;
 	margin-top: 10px;
 	width: 100%;
-	height: 140px;
 }
 hr{
 
@@ -582,8 +581,7 @@ hr{
 	position: relative;
 	width: 100%;
 	height: 60px;
-	margin-top: 20px;
-
+	margin-top: 0.7em;
 }
 
 .comment_top img{
@@ -592,7 +590,7 @@ hr{
 	max-height: 50px;
 	max-width: 50px;
 	border-radius: 50%;
-	margin-right: 10px;
+	margin-right: 0.3em;
 }
 .comment_info{
 	position: relative;
@@ -637,9 +635,9 @@ hr{
 }
 .comment_content{
 	position: relative;
-	padding: 10px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+	padding: 0.5em;
+	margin-top: 0.7em;
+	margin-bottom: 0.7em;
 	width: calc( 100% - 20px);
 	font-size: 1.2em;
 	white-space: pre-line;
