--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -123,8 +123,9 @@ border-top: 7px solid var(--color_purple);
 .side_best h3{
 	width: 100%;
 	font-size: 1.5em;
-	font-weight: 500;
+	font-weight: bold;
 	text-indent: 10px;
+	margin: 0.5em 0;
 }
 .side_bestContentsList{
 	position: relative;
