--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -64,12 +64,10 @@
 					<div class="side_bestContentsList"></div>
 				</div>
 				<div class="side_adWrap">
-					<input type="button" id="adButton_1" value="X">
-					<img src="http://127.0.0.1:5000/static/img/KZYmXtjB.jpg">
+					<img src="http://www.sejongpr.ac.kr/ImageFileView?imgPath=board&imgName=30_1.jpg&imgGubun=F">
 				</div>
 				<div class="side_adWrap">
-					<input type="button" id="adButton_2" value="X">
-					<img src="http://127.0.0.1:5000/static/img/KZYmXtjB.jpg">
+					<img src="https://i.pinimg.com/564x/34/d2/5e/34d25eac59527f61b86bbd6bedf81345.jpg">
 				</div>
 
 
