--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -73,6 +73,9 @@
 
 	font-size: 1.5em;
 	font-weight: 700;
+		overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 .post_board{
 	display: none;
