Revert "Merge remote-tracking branch 'upstream/master'"
This reverts commit 12e17255eccc92a45aadbdb2de81e0691122dcdc, reversing
changes made to b5fe4a3c035e3bc6629aeb988a7a802c737de8cc.

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -79,7 +79,7 @@
 
         <div class="report_container">
             <div class="report_sub_title report">
-                <input type="checkbox" class="r_item report_check_first">
+                <input type="checkbox" disabled class="r_item">
                 <span class="r_item">신고 횟수</span>
                 <span class="r_item">작성자 닉네임</span>
                 <span class="r_item">제목</span>
@@ -90,7 +90,51 @@
             </div>
             <div class="line2"></div>
             <div class="reports">
-
+                <!-- <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">닉넴(아디)</span>
+                    <span class="r_item">아 ㅋㅋ 신고 게시글 제목</span>
+                    <span class="r_item">13</span>
+                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
+                </div> -->
+                <!-- <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/14</span>
+                    <span class="r_item">신고 게시글 예시1</span>
+                    <span class="r_item">욕설 및 부적절한 언어 사용</span>
+                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
+                </div>
+                <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/19</span>
+                    <span class="r_item">신고 게시글 예시2</span>
+                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
+                </div>
+                <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/24</span>
+                    <span class="r_item">신고 게시글 예시3</span>
+                    <span class="r_item">음란성 및 청소년에게 부적절한 내용</span>
+                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
+                </div>
+                <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/10/03</span>
+                    <span class="r_item">신고 게시글 예시4</span>
+                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
+                </div> -->
             </div>
         </div>
 
