--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -559,6 +559,7 @@ border-top: 7px solid var(--color_purple);
 	position: relative;
 	margin-top: 10px;
 	width: 100%;
+
 }
 hr{
 
@@ -583,7 +584,8 @@ hr{
 	position: relative;
 	width: 100%;
 	height: 60px;
-	margin-top: 0.7em;
+	margin-top: 20px;
+
 }
 
 .comment_top img{
@@ -592,7 +594,7 @@ hr{
 	max-height: 50px;
 	max-width: 50px;
 	border-radius: 50%;
-	margin-right: 0.3em;
+	margin-right: 10px;
 }
 .comment_info{
 	position: relative;
@@ -637,9 +639,9 @@ hr{
 }
 .comment_content{
 	position: relative;
-	padding: 0.5em;
-	margin-top: 0.7em;
-	margin-bottom: 0.7em;
+	padding: 10px;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	width: calc( 100% - 20px);
 	font-size: 1.2em;
 	white-space: pre-line;
