--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -124,9 +124,8 @@ border-top: 7px solid var(--color_purple);
 .side_best h3{
 	width: 100%;
 	font-size: 1.5em;
-	font-weight: bold;
+	font-weight: 500;
 	text-indent: 10px;
-	margin: 0.5em 0;
 }
 .side_bestContentsList{
 	position: relative;
