--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -97,7 +97,7 @@
 }
 .post_others{
 	display: flex;
-	align-items: : center;
+	align-items: center;
 	align-self: flex-end;
 	padding-right: 10px;
 }
