--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -128,11 +128,10 @@
         
     </div>
 
-
-
-    <script src="../static/js/manager.js" type="text/javascript"></script>
+    <script type="module" src="../static/js/hw/components/modal/modify_board.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/manager.js"></script> -->
+    <script type="module" src="../static/js/manager.js"></script>
 
 </body>
-
 
 </html>
