API URL 추출 (20.10.30)

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -26,7 +26,6 @@
         </div>
     </header>
 
-
     <div class="top_btns">
         <button class="board_management_btn top_btn">
             카테고리/게시판 관리
@@ -38,9 +37,6 @@
             회원 관리
         </button>
     </div>
-
-
-
 
     <div class="board_management_container">
 
@@ -128,9 +124,9 @@
         
     </div>
 
-    <script type="module" src="../static/js/hw/components/modal/modify_board.js"></script>
-    <!-- <script type="text/javascript" src="../static/js/manager.js"></script> -->
-    <script type="module" src="../static/js/manager.js"></script>
+    <script type="module" src="/static/js/config.js"></script>
+    <script type="module" src="/static/js/hw/components/modal/modify_board.js"></script>
+    <script type="module" src="/static/js/manager.js"></script>
 
 </body>
 
