--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -104,8 +104,9 @@
     <script>
         AOS.init();
     </script>
-    <script src="../static/js/main.js" type="text/javascript"></script>
-    <script src="../static/js/auth.js" type="text/javascript"></script>
+    <script type="module" src="/static/js/config.js"></script>
+    <script type="module" src="/static/js/main.js" ></script>
+    <script type="module" src="/static/js/auth.js" ></script>
 
 </body>
 
