--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -125,7 +125,11 @@
     </div>
 
     <script type="module" src="/static/js/config.js"></script>
+    <script type="module" src="/static/js/hw/components/modal/add_board.js"></script>
+    <script type="module" src="/static/js/hw/components/modal/add_category.js"></script>
+    <script type="module" src="/static/js/hw/components/modal/add_user_blacklist.js"></script>
     <script type="module" src="/static/js/hw/components/modal/modify_board.js"></script>
+    <script type="module" src="/static/js/hw/components/modal/modify_user.js"></script>
     <script type="module" src="/static/js/manager.js"></script>
 
 </body>
