게시글 내 댓글 신고 / 완료 / 삭제 기능 수정
나연이 part 생략
게시글 내 댓글 신고 / 완료 / 삭제 기능 수정

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -105,8 +105,8 @@
         AOS.init();
     </script>
     <script src="../static/js/main.js" type="text/javascript"></script>
-    <script src="../static/js/auth.js" type="text/javascript"></script>
-
+    <!-- <script src="../static/js/auth.js" type="text/javascript"></script> -->
+    <script src="../static/js/auth.js" type="module"></script>
 </body>
 
 
