post.html typescript modify
post.html script 수정
render.js console.log 삭제

--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -8,7 +8,6 @@
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/post.css') }}">
 
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/navigation.css') }}">
-
 </head>
 <body>
 
@@ -90,6 +89,6 @@
 <script type="module" src="/static/js/post/fetch.js"></script>
 <script type="module" src="/static/js/post/router.js"></script>
 
-<script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+<script type="module" src="/static/js/auth.js"></script>
 
 </html>
