메인 페이지 리팩토링 ver1 (20.11.04)
함수 추출 및 함수/변수명 변경

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -13,7 +13,6 @@
 
     <header>
         <div class="nav_container">
-
             <div class="nav_menus">
                 <div class="nav_logo">
                     <a href="/" class="nav_logo_name">ROOMS</a>
@@ -22,7 +21,6 @@
                     <a href="/" class="nav_menu">MAIN</a>
                 </div>
             </div>
-
         </div>
     </header>
 
@@ -45,21 +43,17 @@
             <select class="category_menu">
                 <option selected>Select :)</option>
             </select>
-            
             <button class="category_plus_btn plus_btn">카테고리 추가 (+)</button>
         </div>
 
         <div class="line"></div>
 
-        <div class="board_container">
-            
-        </div>
+        <div class="board_container"></div>
 
         <div id="category_modal_container"></div>
         <div id="board_modal_container"></div>
         <div id="board_modify_modal_container"></div>
         
-
     </div>
 
     <div class="report_management_container">
