관리자 페이지 리팩토링 ver2_ing (20.11.17)
manager.html 모달 컨테이너 통합
create 함수 컴포넌츠 폴더로 이동하는 중

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -36,6 +36,8 @@
         </button>
     </div>
 
+    <div id="modal_container"></div>
+
     <div class="board_management_container">
 
         <div class="category_container">
@@ -49,10 +51,6 @@
         <div class="line"></div>
 
         <div class="board_container"></div>
-
-        <div id="category_modal_container"></div>
-        <div id="board_modal_container"></div>
-        <div id="board_modify_modal_container"></div>
         
     </div>
 
@@ -84,8 +82,6 @@
             </div>
         </div>
 
-        <div id="blacklist_modal_container"></div>
-
     </div>
 
     <div class="user_management_container">
@@ -113,8 +109,6 @@
                 
             </div>
         </div>
-
-        <div id="user_modify_modal_container"></div>
         
     </div>
 
@@ -124,7 +118,7 @@
     <script type="module" src="/static/js/hw/components/modal/add_user_blacklist.js"></script>
     <script type="module" src="/static/js/hw/components/modal/modify_board.js"></script>
     <script type="module" src="/static/js/hw/components/modal/modify_user.js"></script>
-    <script type="module" src="/static/js/hw/api/management/board_and_category.js"></script>
+    <script type="module" src="/static/js/hw/api/management/category_and_board.js"></script>
     <script type="module" src="/static/js/hw/api/management/report.js"></script>
     <script type="module" src="/static/js/hw/api/management/user.js"></script>
     <script type="module" src="/static/js/hw/manager.js"></script>
