폴더 이동 및 메인페이지, 마이페이지 컴포넌트 함수 추출 (20.11.21)

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -97,8 +97,7 @@
         AOS.init();
     </script>
     <script type="module" src="/static/js/config.js"></script>
-    <script type="module" src="/static/js/hw/api/main_page.js"></script>
-    <script type="module" src="/static/js/hw/main.js" ></script>
+    <script type="module" src="/static/js/main.js" ></script>
     <script type="module" src="/static/js/auth.js" ></script>
 
 </body>
