--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -113,15 +113,7 @@
     </div>
 
     <script type="module" src="/static/js/config.js"></script>
-    <script type="module" src="/static/js/hw/components/modal/add_board.js"></script>
-    <script type="module" src="/static/js/hw/components/modal/add_category.js"></script>
-    <script type="module" src="/static/js/hw/components/modal/add_user_blacklist.js"></script>
-    <script type="module" src="/static/js/hw/components/modal/modify_board.js"></script>
-    <script type="module" src="/static/js/hw/components/modal/modify_user.js"></script>
-    <script type="module" src="/static/js/hw/api/management/category_and_board.js"></script>
-    <script type="module" src="/static/js/hw/api/management/report.js"></script>
-    <script type="module" src="/static/js/hw/api/management/user.js"></script>
-    <script type="module" src="/static/js/hw/manager.js"></script>
+    <script type="module" src="/static/js/manager.js"></script>
 
 </body>
 
