--- a/TeamProject/templates/mypage.html
+++ b/TeamProject/templates/mypage.html
@@ -42,7 +42,7 @@
 
     <script type="module" src="/static/js/config.js"></script>
     <script type="module" src="/static/js/auth.js" ></script>
-    <script type="module" src="/static/js/hw/mypage.js" ></script>
+    <script type="module" src="/static/js/mypage.js" ></script>
 
 </body>
 
