Auth.js Refactoring (20.11.29)
Auth.js 전반적인 파일분리 마치고
불필요한 매개변수 제거 및 중복제거 알고리즘 변환

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -98,7 +98,9 @@
     </script>
     <script type="module" src="/static/js/config.js"></script>
     <script type="module" src="/static/js/main.js" ></script>
-    <script type="module" src="/static/js/auth.js" ></script>
+    <script type="module" src="../static/js/Auth/event.js" ></script>
+    <script type="module" src="../static/js/Auth/main.js" ></script>
+    <script type="module" src="../static/js/Auth/render.js" ></script>
 
 </body>
 
