--- a/TeamProject/templates/mypage.html
+++ b/TeamProject/templates/mypage.html
@@ -41,8 +41,14 @@
     <div class="user_info_modify_container"></div>
 
     <script type="module" src="/static/js/config.js"></script>
-    <script type="module" src="/static/js/auth.js" ></script>
     <script type="module" src="/static/js/mypage.js" ></script>
+    <script type="module" src="../static/js/Auth/event.js" ></script>
+    <script type="module" src="../static/js/Auth/main.js" ></script>
+    <script type="module" src="../static/js/Auth/render.js" ></script>
+    <script type="module" src="../static/js/board/list/event.js" ></script>
+    <script type="module" src="../static/js/board/list/index.js" ></script>
+    <script type="module" src="../static/js/board/list/render.js" ></script>
+    <script type="module" src="../static/js/board/post/event.js" ></script>
 
 </body>
 
