--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -89,10 +89,13 @@
 <script type="module" src="/static/js/board/fetch.js"></script>
 <script type="module" src="/static/js/board/router.js"></script>
 <script type="module" src="/static/js/board/list/render.js"></script>
-<script type="module" src="/static/js/board/aside/render.js"></script>
 <script type="module" src="/static/js/board/list/index.js"></script>
+<script type="module" src="/static/js/board/list/event.js"></script>
+<script type="module" src="/static/js/board/aside/render.js"></script>
 <script type="module" src="/static/js/board/aside/main.js"></script>
-
-<script type="module" src="/static/js/auth.js"></script>
+<script type="module" src="/static/js/board/aside/event.js"></script>
+<script type="module" src="../static/js/Auth/render.js"></script>
+<script type="module" src="../static/js/Auth/main.js"></script>
+<script type="module" src="../static/js/Auth/event.js"></script>
 
 </html>
