main, mypage, manager.js 컨트롤 폴더로 분리 (20.11.29)

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -112,7 +112,9 @@
     </div>
 
     <script type="module" src="/static/js/config.js"></script>
-    <script type="module" src="/static/js/manager.js"></script>
+    <script type="module" src="/static/js/controllers/management/category.js"></script>
+    <script type="module" src="/static/js/controllers/management/report.js"></script>
+    <script type="module" src="/static/js/controllers/management/user.js"></script>
 
 </body>
 
