--- a/TeamProject/templates/mypage.html
+++ b/TeamProject/templates/mypage.html
@@ -41,7 +41,7 @@
     <div class="user_info_modify_container"></div>
 
     <script type="module" src="/static/js/config.js"></script>
-    <script type="module" src="/static/js/mypage.js" ></script>
+    <script type="module" src="/static/js/controllers/mypage/userinfo.js"></script>
     <script type="module" src="../static/js/Auth/event.js" ></script>
     <script type="module" src="../static/js/Auth/main.js" ></script>
     <script type="module" src="../static/js/Auth/render.js" ></script>
