--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -68,8 +68,6 @@
 				<div class="side_adWrap">
 					<img src="https://i.pinimg.com/564x/34/d2/5e/34d25eac59527f61b86bbd6bedf81345.jpg">
 				</div>
-
-
 			</section>
 		</div>
 	</div>
@@ -86,9 +84,9 @@
 <script type="module" src="/static/js/config.js"></script>
 
 <!-- BOARD JS -->
-<script type="module" src="/static/js/board/event.js"></script>
+<!-- <script type="module" src="/static/js/board/event.js"></script> -->
 <script type="module" src="/static/js/board/main.js"></script>
-<script type="module" src="/static/js/board/render.js"></script>
+<!-- <script type="module" src="/static/js/board/render.js"></script> -->
 <script type="module" src="/static/js/board/fetch.js"></script>
 <script type="module" src="/static/js/board/router.js"></script>
 <!-- LIST JS -->
@@ -99,6 +97,14 @@
 <script type="module" src="/static/js/board/aside/render.js"></script>
 <script type="module" src="/static/js/board/aside/main.js"></script>
 <script type="module" src="/static/js/board/aside/event.js"></script>
+<!-- BOARD  JS -->
+<script type="module" src="/static/js/board/post/event.js"></script>
+<script type="module" src="/static/js/board/post/index.js"></script>
+<script type="module" src="/static/js/board/post/render.js"></script>
+<!-- COMMENT JS -->
+<script type="module" src="/static/js/board/comment/event.js"></script>
+<script type="module" src="/static/js/board/comment/index.js"></script>
+<script type="module" src="/static/js/board/comment/render.js"></script>
 <!-- AUTH JS -->
 <script type="module" src="../static/js/Auth/render.js"></script>
 <script type="module" src="../static/js/Auth/main.js"></script>
