--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -103,7 +103,9 @@
     <script type="module" src="../static/js/Auth/event.js" ></script>
     <script type="module" src="../static/js/Auth/main.js" ></script>
     <script type="module" src="../static/js/Auth/render.js" ></script>
-
+    <script type="module" src="../static/js/board/list/render.js"></script>
+    <script type="module" src="../static/js/board/list/index.js"></script>
+    <script type="module" src="../static/js/board/list/event.js"></script>
 </body>
 
 </html>
