함수명,변수명 변경 , 파일분리 정리 ( 20.12.01 )
함수명변경, 변수명 바꾸기
파일분리 완료

--- a/TeamProject/templates/mypage.html
+++ b/TeamProject/templates/mypage.html
@@ -42,12 +42,12 @@
 
     <script type="module" src="/static/js/config.js"></script>
     <script type="module" src="/static/js/controllers/mypage/userinfo.js"></script>
-    <script type="module" src="../static/js/Auth/event.js" ></script>
-    <script type="module" src="../static/js/Auth/main.js" ></script>
-    <script type="module" src="../static/js/Auth/render.js" ></script>
-    <script type="module" src="../static/js/board/list/event.js" ></script>
+    <!-- <script type="module" src="../static/js/Auth/event.js" ></script>
+    <script type="module" src="../static/js/Auth/main.js" ></script> -->
+    <!-- <script type="module" src="../static/js/Auth/render.js" ></script> -->
+    <!-- <script type="module" src="../static/js/board/list/event.js" ></script> -->
     <script type="module" src="../static/js/board/list/index.js" ></script>
-    <script type="module" src="../static/js/board/list/render.js" ></script>
+    <!-- <script type="module" src="../static/js/board/list/render.js" ></script> -->
     <script type="module" src="../static/js/board/post/event.js" ></script>
 
 </body>
